# secrets

./: Cargo.toml  README.md
.github/workflows/: update.yml
scripts/: script.js
src/: main.rs  template.md
