[package]
name = "secrets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
async-trait = "0.1.66"
chrono = "0.4.23"
futures = "0.3.26"
itertools = "0.10.5"
octocrab = "0.18.1"
serde = "1.0.152"
tinytemplate = "1.2.1"
tokio = { version = "1.26.0", features = ["full"] }
url = { version = "2.2.2", features = ["serde"] }
